fix: added readable flux back to task run logs

--- a/src/tasks/components/RunLogsList.scss
+++ b/src/tasks/components/RunLogsList.scss
@@ -11,3 +11,9 @@
   white-space: pre-wrap;
   word-break: break-all;
 }
+
+.run-logs--list-flux {
+  white-space: pre-wrap;
+  word-break: break-all;
+  height: 30vh;
+}
